--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Bolinha Amarela - Tutorial YouTube - Filipe Alves</title>
-		<script src="Sprite.js"></script>
+		<!-- <script src="Sprite.js"></script> -->
 		<link rel="stylesheet" href="./CSS/Style.css">
 	</head>
 	<body>
