--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 	<body>
 	
 	</body>
-	<script type= "module"src="./ModulesJS/Game.js"></script>
+	<script type= "module"src="./ModulesJS/Screen.js"></script>
 </html>
